# microalpha

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PROGRESS.md  PROJECT.md  Plan.md  README.md  TRACKING_POLICY.md  equity_curve.csv  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run.py  sitemap.xml  sp500.txt  sp500_permno.txt  sp500_tickers_from_export.txt  walk_forward.py  walk_forward_equity.csv
.agent/: LOGBOOK.md  MASTER_PLAN.md
.codex/: pr_body_wrds_foundation.md
.project-os/: config.toml  events.jsonl
CODEX_SPRINT_TICKETS/: index.html
DECISIONS/: index.html
DOCS_AND_LOGGING_SYSTEM/: index.html
NOW/: index.html
PLAN_OF_RECORD/: index.html
PORTFOLIO_IMPACT_BRIEF/: index.html
RUNBOOK/: index.html
RUN_REGISTRY/: index.html
TICKETS/: index.html
agent_runs/: index.html
api/: index.html
architecture/: index.html
assets/: engineering_benchmark_v030.json
audit-lab/: index.html
benchmarks/: bench_engine.py  bench_multi_stream.py  bench_v030.py  index.html
configs/: breakout.yaml  flagship_mom.yaml  flagship_wrds_single.yaml  meanrev.yaml  mm.yaml  mm_lob_same_tick.yaml  mm_lob_tplus1.yaml  wfv_cs_mom.yaml  wfv_cs_mom_small.yaml  wfv_cs_mom_sp500_med.yaml  wfv_cs_mom_sp500_small.yaml  wfv_flagship_mom.yaml  wfv_flagship_public.yaml  wfv_flagship_wrds.yaml  wfv_flagship_wrds_smoke.yaml  wfv_flagship_wrds_sweep35.yaml  wfv_meanrev.yaml  wfv_xsec_mom.yaml  wfv_xsec_mom_sp500.yaml  xsec_mom.yaml
data/: AAPL.csv  AMZN.csv  GOOG.csv  JPM.csv  META.csv  MSFT.csv  NVDA.csv  SPY.csv  TSLA.csv  V.csv
data_sp500/: A.csv  AA.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABI.csv  ABK.csv  ABMD.csv  ABNB.csv  ABS.csv  ABT.csv  ACAS.csv  ACGL.csv  ACN.csv  ACS.csv  ACV.csv  ADBE.csv  ADCT.csv  ADI.csv  ADM.csv  ADNT.csv  ADP.csv  ADSK.csv  ADT.csv  AEE.csv  AEP.csv  AES.csv  AET.csv  AFL.csv  AGN.csv  AIG.csv  AIRC.csv  AIV.csv  AIZ.csv  AJG.csv  AKAM.csv  AKS.csv  ALB.csv  ALGN.csv  (+897 more)
docs/: CODEX_SPRINT_TICKETS.md  DECISIONS.md  DOCS_AND_LOGGING_SYSTEM.md  NOW.md  PLAN_OF_RECORD.md  PORTFOLIO_IMPACT_BRIEF.md  RUNBOOK.md  RUN_REGISTRY.md  TICKETS.md  api.md  architecture.md  audit-lab.md  benchmarks.md  calibration.md  data_sp500.md  examples.md  factors.md  flagship_momentum_wrds.md  flagship_strategy.md  index.md  leakage-safety.md  limitations.md  market-case.md  portfolio_evidence_2026-07-11.md  reproducibility.md  results.md  results_wrds.md  results_wrds_resume.md  results_wrds_smoke.md  wrds.md
examples/: demo_minute_data.csv  index.html
factors/: index.html
flagship_momentum_wrds/: index.html
flagship_strategy/: index.html
leakage-safety/: index.html
limitations/: index.html
market-case/: index.html
metadata/: codex_sessions.md  sp500_sector_overrides.csv
microalpha/: broker.py  data.py  engine.py  events.py  portfolio.py  risk.py  slippage.py
microalpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: tearsheet.ipynb  wrds_flagship_mom.ipynb
portfolio_evidence_2026-07-11/: index.html
project_state/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAIMS_AND_EVIDENCE.md  CONFIG_REFERENCE.md  CURRENT_EVIDENCE_SUMMARY.md  CURRENT_RESULTS.md  DATAFLOW.md  DATA_ARTIFACT_INVENTORY.md  DEPENDENCY_GRAPH.md  EXPERIMENTS.md  FUNCTION_INDEX.md  INDEX.md  KNOWN_ISSUES.md  MODULE_SUMMARIES.md  NON_WRDS_DATA_REQUIREMENTS.md  OPEN_QUESTIONS.md  PIPELINE_FLOW.md  RESEARCH_NOTES.md  ROADMAP.md  RUNBOOK.md  SERVER_ENVIRONMENT.md  STATE_INDEX.md  STYLE_GUIDE.md  TEST_COVERAGE.md  VALIDATION_MATRIX.md  WRDS_DATA_REQUIREMENTS.md
reports/: analytics.py  data_inventory_sp500.json  factor_exposure.py  factors.py  factors_ff.py  generate_summary.py  html_report.py  render_wrds_flagship.py  spa.py  tearsheet.py  wfv_report.py
reproducibility/: index.html
results_wrds/: index.html
results_wrds_resume/: index.html
results_wrds_smoke/: index.html
scripts/: __init__.py  augment_sp500.py  build_flagship_universe.py  build_runs_index.py  build_wrds_signals.py  demo.sh  (+20 more)
(+923 files in other folders)
