[project]
name = "microalpha"
version = "0.1.0"
description = "A event-driven backtesting engine for quantitative strategies."
authors = [
    { name = "Mateo Bodon", email = "mateo.bodon@yale.edu" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "pydantic>=2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff>=0.4.0",      # ensure 'ruff check' exists
    "black>=23.7",
    "matplotlib",
    "plotly>=5.15",
    "pyarrow",
    "pydantic",
    "pandas-stubs",
    "types-PyYAML",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = [
    "notebooks/**",
    ".ipynb_checkpoints/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # Temporarily ignore long lines in CI to unblock; keep Black for wrapping
    "E501",
]

[tool.mypy]
python_version = "3.12"
packages = ["microalpha"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
microalpha = "microalpha.cli:main"
