[project]
name = "microalpha"
version = "0.2.0"
description = "An event-driven quantitative research audit lab for chronology, costs, walk-forward evidence, and reproducibility."
authors = [
    { name = "Mateo Bodon", email = "mateo.bodon@yale.edu" },
]
requires-python = ">=3.10,<3.13"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "pydantic>=2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff>=0.4.0",      # ensure 'ruff check' exists
    "black>=23.7",
    "matplotlib",
    "plotly>=5.15",
    "pyarrow",
    "pydantic",
    "pandas-stubs",
    "types-PyYAML",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "isort>=5.13",
    "detect-secrets>=1.5",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.ruff]
line-length = 88
exclude = [
    "notebooks/**",
    ".ipynb_checkpoints/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # Temporarily ignore long lines in CI to unblock; keep Black for wrapping
    "E501",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
packages = ["microalpha"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
microalpha = "microalpha.cli:main"

[project.urls]
Homepage = "https://github.com/MateoBodon/microalpha"
Documentation = "https://mateobodon.github.io/microalpha/"
Issues = "https://github.com/MateoBodon/microalpha/issues"
